package org.leap.domain.enums;

public enum AccountStatus {
    ACTIVE,
    SUSPENDED,
    CLOSED
}