package org.leap.domain.enums;

public enum OrderSide {
    BUY,
    SELL
}